--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/zrd/Pictures/w2.jpg
-wallpaper = eDP-1, /home/zrd/Pictures/w2.jpg
+preload = ~/Pictures/w2.png
+wallpaper = eDP-1, ~/Pictures/w2.png
 splash = true
 ipc = off
