tmux: set base index to 1

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g base-index 1
+setw -g pane-base-index 1
 #Vim keys
 setw -g mode-keys vi
 set -g status-style "bg=blue"
@@ -13,12 +15,7 @@ set -g status-style "bg=blue"
  set -g @plugin 'tmux-plugins/tmux-sensible'
  #set -g @plugin 'tmux-plugins/tmux-yank'
  set -g @plugin 'christoomey/vim-tmux-navigator'
- #set -g @plugin 'dracula/tmux'
 
- #set -g status-position bottom
- #set -g @dracula-show-powerline true
- #set -g @dracula-show-left-icon window
- #set -g @dracula-plugins "attached-clients"
 #Open in cd
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
