--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,8 +33,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
-$fileManager = wezterm -e yazi
+$terminal = ghostty
+$fileManager = ghostty -e yazi
 $menu = wofi --show drun
 
 
