hypr: add hyprshot keybind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -280,6 +280,10 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 # Custom
 bind = $mainMod, b, exec, killall waybar || waybar 
+# HyprShot
+bind = $mainMod, Print, exec, hyprshot -m window -o ~/Pictures/HyprShots
+bind = $mainMod SHIFT, Print, exec, hyprshot -m output -o ~/Pictures/HyprShots
+bind = $mainMod CTRL, Print, exec, hyprshot -m region -o ~/Pictures/HyprShots
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
