--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = ghostty
-$fileManager = ghostty -e yazi
+$fileManager = $terminal -e yazi
 $menu = wofi --show drun
 
 
@@ -284,6 +284,8 @@ bind = $mainMod, b, exec, killall waybar || waybar
 bind = $mainMod, Print, exec, hyprshot -m window -o ~/Pictures/HyprShots
 bind = $mainMod SHIFT, Print, exec, hyprshot -m output -o ~/Pictures/HyprShots
 bind = $mainMod CTRL, Print, exec, hyprshot -m region -o ~/Pictures/HyprShots
+# HyprLock
+bind = $mainMod , l, exec, hyprlock # Open screenlock
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
