--- a/ghostty/config
+++ b/ghostty/config
@@ -4,6 +4,7 @@ theme = deep
 font-size = 11
 font-feature = ss01,liga
 window-decoration = true
+confirm-close-surface = false
 keybind = shift+left=previous_tab
 keybind = shift+right=next_tab
 keybind = ctrl+f=toggle_fullscreen
