--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 # exec-once = waybar -c /home/zrd/.config/waybar/config
 exec-once = hyprpaper
-exec-once = systemctl --user start hyprpolkitagent.service
+exec-once = systemctl --user start polkit.service
 
 #############################
 ### ENVIRONMENT VARIABLES ###
