hpyr,waybar: floating window(bt, nmtui), gap+border adjustment

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -41,7 +41,7 @@
             "tooltip-format-disconnected": "Error",
             "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
             "tooltip-format-ethernet": "{ifname} 🖧 ",
-            "on-click": "ghostty -e nmtui"
+            "on-click": "ghostty --class=com.ghostty.float -e nmtui"
         },
         "bluetooth": {
             "format-on": "󰂯",
@@ -53,7 +53,7 @@
             "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
             "tooltip-format-enumerate-connected": "{device_alias}\n{device_address}",
             "tooltip-format-enumerate-connected-battery": "{device_alias}\n{device_address}\n{device_battery_percentage}%",
-            "on-click": "ghostty -e bluetui",
+            "on-click": "ghostty --class=com.ghostty.float -e bluetui",
         }, 
         "battery": {
             "interval":30,
