--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -71,9 +71,9 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10 #default 20
 
-    border_size = 2
+    border_size = 1 #default 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -167,8 +167,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true# If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -298,7 +298,7 @@ bind = $mainMod , l, exec, hyprlock # Open screenlock
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-windowrulev2 =  move 0 0 float, class:fc
+windowrulev2 =  float, class:(.*)float(.*)
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
