hypr: PiP windowrule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -90,7 +90,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -299,6 +299,12 @@ bind = $mainMod , l, exec, hyprlock # Open screenlock
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 =  float, class:(.*)float(.*)
+
+# Picture-in-Picture
+windowrulev2 =  float, title:Picture-in-Picture
+windowrulev2 =  pin, title:Picture-in-Picture
+windowrulev2 =  size 50% 50%, title:Picture-in-Picture
+
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
