hypr: playerctl shortcuts, swipe gesture, hypridle

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -50,6 +50,7 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 # exec-once = waybar -c /home/zrd/.config/waybar/config
 exec-once = hyprpaper
+exec-once = hypridle
 exec-once = systemctl --user start polkit.service
 
 #############################
@@ -60,6 +61,7 @@ exec-once = systemctl --user start polkit.service
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XDG_MENU_PREFIX,arch-
 
 
 #####################
@@ -195,7 +197,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
+gesture = 3, horizontal, workspace
 }
 
 # Example per-device config
@@ -286,6 +288,11 @@ bind = $mainMod SHIFT, Print, exec, hyprshot -m output -o ~/Pictures/HyprShots
 bind = $mainMod CTRL, Print, exec, hyprshot -m region -o ~/Pictures/HyprShots
 # HyprLock
 bind = $mainMod , l, exec, hyprlock # Open screenlock
+# media control with playerctl
+bind = $mainMod, Home, exec, playerctl previous
+bind = $mainMod, Insert, exec, playerctl --all-players play-pause
+bind = $mainMod, End, exec, playerctl next
+bind = $mainMod, Delete, exec, playerctl shuffle toggle
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
