--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,22 +1,33 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file $HOME/.config/tmux/tmux.conf
+
+# set prefix key to ctrl-a 
+# unbind C-b
+# set -g prefix C-a
+# bind C-a send-prefix
 
 set -g base-index 1
 setw -g pane-base-index 1
-#Vim keys
+
+setw -g mouse on
+
+# Vim keys
 setw -g mode-keys vi
-set -g status-style "bg=blue"
+set -g status-style "fg=white,bg=blue"
 # bind-key h  select-pane -L
 # bind-key j  select-pane -U
 # bind-key k  select-pane -D
 # bind-key l  select-pane -R
-#Plugins
- set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'tmux-plugins/tmux-sensible'
- #set -g @plugin 'tmux-plugins/tmux-yank'
- set -g @plugin 'christoomey/vim-tmux-navigator'
 
-#Open in cd
+# Plugins
+# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Open in cd
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
-run '~/.tmux/plugins/tpm/tpm'
+bind 'c' new-window -c "#{pane_current_path}"
+
+#run '~/.tmux/plugins/tpm/tpm'
