--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -296,24 +296,13 @@ bind = $mainMod, Delete, exec, playerctl shuffle toggle
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-windowrulev2 =  float, class:(.*)float(.*)
+# Float any window with "float" in class
+windowrule = match:class .*float.*, float true
 
 # Picture-in-Picture
-windowrulev2 =  float, title:Picture-in-Picture
-windowrulev2 =  pin, title:Picture-in-Picture
-windowrulev2 =  size 50% 50%, title:Picture-in-Picture
+windowrule = match:title ^Picture-in-Picture$, float true
+windowrule = match:title ^Picture-in-Picture$, pin true
+windowrule = match:title ^Picture-in-Picture$, size 50% 50%
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# Ignore maximize requests from apps
+windowrule = match:class .*, suppress_event maximize
